ad prefix Admin

--- a/views/elements/navbar-header.ejs
+++ b/views/elements/navbar-header.ejs
@@ -10,5 +10,5 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-  <a class="navbar-brand" href="index.html">NodeJS Training  </a>
+  <a class="navbar-brand" href="./index">NodeJS Training  </a>
 </div>
